Fix external link icon wrapping to next line.
Fixes #3395. Adds `display: inline-block` to external link mixin to
prevent icon from wrapping into next line.

--- a/src/stylesheets/core/mixins/_external-link.scss
+++ b/src/stylesheets/core/mixins/_external-link.scss
@@ -3,6 +3,8 @@
   $external-link-hover,
   $image-path: $theme-image-path
 ) {
+  display: inline-block;
+
   &::after {
     background-image: url("#{$image-path}/#{$external-link}.svg");
     background-position: 0 0;
